--- a/.forceignore
+++ b/.forceignore
@@ -2,6 +2,11 @@
 # More information: https://developer.salesforce.com/docs/atlas.en-us.sfdx_dev.meta/sfdx_dev/sfdx_dev_exclude_source.htm
 #
 
+# Standard metadata
+package.xml
+**/profiles/**
+**/listViews/**
+
 package.xml
 
 # LWC configuration files
@@ -10,3 +15,6 @@ package.xml
 
 # LWC Jest
 **/__tests__/**
+
+# Others
+force-app/main/default/appMenus/AppSwitcher.appMenu-meta.xml
