--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test:unit:watch": "sfdx-lwc-jest --watch",
     "test:unit:debug": "sfdx-lwc-jest --debug",
     "test:unit:coverage": "sfdx-lwc-jest --coverage",
+    "setup": "npm run org:create && npm run source:push && npm run permset:assign",
+    "org:create": "sfdx org:create:scratch -f ./config/project-scratch-def.json -a $npm_config_org -y 30",
+    "source:push": "sfdx project:deploy:start -o $npm_config_org",
+    "permset:assign": "sfdx force:user:permset:assign -n taskManagementPermSet -u $npm_config_org",
     "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "postinstall": "husky install",
